<resources>
    <string name="app_name">App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="project_1">Spotify Streamer</string>
    <string name="project_2">Football Scores App</string>
    <string name="project_3">Library App</string>
    <string name="project_4">Build it Bigger</string>
    <string name="project_5">XYZ Reader</string>
    <string name="project_6">Capstone Project</string>
</resources>
